syntax = 'proto3';

import "google/protobuf/timestamp.proto";

package user;

service UserService {
  rpc create (createUserDto) returns (User) {}
  rpc findAll (searchUserDto) returns (Users) {}
  rpc findOneById (findUserByIdDto) returns (User) {}
  rpc update (updateUserByIdDto) returns (User) {}
  rpc delete (findUserByIdDto) returns (User) {}
}

message createUserDto {
  string full_name = 1;
  string user_name = 2;
  string email = 3;
  string password = 4;
}

message updateUserDto { 
  optional string full_name = 1;
  optional string user_name = 2;
  optional string email = 3;
  optional string password = 4;
}

message searchUserDto {
  optional string full_name = 1;
  optional string user_name = 2;
  optional string email = 3;
  optional int32 limit = 4;
  optional USER_ROLE role = 5;
}

message findUserByIdDto {
  string user_id = 1;
}

message updateUserByIdDto {
  string user_id = 1;
  updateUserDto userDto = 2;
}

enum USER_ROLE {
  ADMIN = 0;
  USER = 1;
}

message Users {
  repeated User user = 1;
}

message User {
  string user_id = 1;
  string full_name = 2;
  string user_name = 3;
  string email = 4;
  string password = 5;
  USER_ROLE role = 6;
  google.protobuf.Timestamp created_at = 7;
  optional google.protobuf.Timestamp deleted_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}